ein paar schneidige worte hinzugezaubert

--- a/bericht/thesis.tex
+++ b/bericht/thesis.tex
@@ -221,8 +221,9 @@ pdfkeywords={Keywords}
 \mainmatter
 
 \chapter{Einführung und Motivation}\label{ch:intro}
-Wir in unserem Team, bestehend aus Jochen Schmidt, Lennard Rose und Moritz Zeitler sind bereits ein eingespieltes Team. Das Programmierprojekt, indem wir ein Multiplayer-Computerspiel mit C++ und der Multimedia-Bibliothek SDL2 von Grund auf erstellt haben, hatten wir bereits gemeinsam realisiert. Hierbei lag der Fokus auf der Architektur, Algorithmen und Datenstruktur des Spiels und war ein sehr lehrreiches, da wir hier keinerlei Vorerfahrung hatten, und erfolgreiches Projekt. Für diese Projektarbeit wollten wir wieder in ein Themengebiet vorstoßen auf dem wir nicht sehr vertraut waren um uns weiter zu entwickeln. Erste Vorüberlegungen waren inspiriert von der Weihnachtsvorlesung 2020 von David Kriesel über sein "BahnMining" Projekt, indem er Daten, die er über die deutsche Bahn gesammelt hatte, analysierte. Das regte unser Interesse, denn wir hatten uns gefragt wie man den technischen Aspekt dahinter clever umsetzen könne und suchten nach einer sinnvollen Datenthematik. Durch die Situation der Pandemie und die damit einhergehende Brisanz und Aktualität der Daten wie Inzidenz-Werte und Impfrate haben wir uns schnell auf Coronadaten festgelegt. Da wir noch im Besitz von ein paar älterer, ungenutzter Rechner waren, beschlossen wir nicht nur eine simple Lösung, sondern ein betriebsbereites System zu entwickeln. \newline
-Der Fokus dieser Projektarbeit soll also ganz klar auf Schnittstellen, Interaktionen und Recherche im Bereich Data Mining sowie dessen Lösungsmöglichkeiten liegen.
+Wir in unserem Team, bestehend aus Jochen Schmidt, Lennard Rose und Moritz Zeitler hatten nach unserem Gemeinsamen Programmierprojekt beschlossen, wieder zusammen zu arbeiten und diesmal in eine ganz andere Richtung zu gehen. Hierzu muss man wissen, dass unser Programmierprojekt damals aus einem Multiplayer-Computerspiel bestand, welches wir ausschließlich mit C++ sowie SDL programmierten. Da wir nichts vorgefertigtes an Code oder Lösungen benutzten und alles 'von der Pike auf'  entwickelten, lag der Fokus vor allem auf Algorithmen, Datenstrukturen und Softwarearchitektur. \newline
+Dieses mal wollten wir in eine ganz andere Richtung gehen um uns als Entwickler weiter zu entwickeln und unserem Repertoire ein paar neue Tools hinzuzufügen. Erste Vorüberlegungen waren inspiriert von der Weihnachtsvorlesung 2020 von David Kriesel über sein "BahnMining" Projekt, indem er Daten, die er über die deutsche Bahn gesammelt hatte, analysierte. Das regte unser Interesse, denn wir hatten uns gefragt wie man den technischen Aspekt dahinter clever umsetzen könne und suchten nach einer sinnvollen Datenthematik. Durch die Situation der Pandemie und die damit einhergehende Brisanz und Aktualität der Daten wie Inzidenz-Werte und Impfrate haben wir uns schnell auf Coronadaten festgelegt. Da wir noch im Besitz von ein paar älterer, ungenutzter Rechner waren, beschlossen wir nicht nur eine simple Lösung, sondern ein betriebsbereites System zu entwickeln. 
+Der Fokus dieser Projektarbeit soll also ganz klar auf Schnittstellen, Interaktionen und Recherche im Bereich Data Mining sowie dessen Lösungsmöglichkeiten liegen.\newline
 
 \chapter{Entwicklungsprozess}
 Beim Entwicklungsprozess wurde sich f\"ur eine 'scrumartige' L\"osung entschieden. So werden klassische Artefakte und Tools wie etwa das Daily oder der Backlog entsprechend angepasst angewandt. Anpassung meist im Sinne der zeitlichen Komponente. Da das Projekt parallel w\"ahrend des Semesters abl\"auft wurde hier das 'Daily', von einem t\"aglichen auf einen w\"ochentlichen Rhythmus umgestellt. Das Backlog wird durch das Team selbst bef\"ullt da es keinen 'Product Owner' gibt. Genauso wurden die Sprints abgewandelt, durch die zeitliche Entzerrung wird hier direkt auf eine dynamische Sprintl\"ange gesetzt die jeweils zum Sprint-Anfang abgestimmt worden ist. \newline
